<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/base_padding"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-light"
                    android:textSize="@dimen/item_detail_label_text_size"
                    android:textColor="@color/colorSecondaryTextLight"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_label"
                    android:textSize="@dimen/item_detail_value_text_size"
                    android:fontFamily="sans-serif-light"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorPrimaryTextLight"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_content_areas">

                <TextView
                    android:id="@+id/mass_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mass"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-light"
                    android:textSize="@dimen/item_detail_label_text_size"
                    android:textColor="@color/colorSecondaryTextLight"/>

                <TextView
                    android:id="@+id/mass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mass_label"
                    android:textSize="@dimen/item_detail_value_text_size"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorPrimaryTextLight"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_content_areas">

                <TextView
                    android:id="@+id/fell_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fall"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-light"
                    android:textSize="@dimen/item_detail_label_text_size"
                    android:textColor="@color/colorSecondaryTextLight"/>

                <TextView
                    android:id="@+id/fall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fell_label"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/item_detail_value_text_size"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorPrimaryTextLight"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_content_areas">

                <TextView
                    android:id="@+id/year_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-light"
                    android:textSize="@dimen/item_detail_label_text_size"
                    android:textColor="@color/colorSecondaryTextLight"/>

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/year_label"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/item_detail_value_text_size"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorPrimaryTextLight"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_content_areas">

                <TextView
                    android:id="@+id/lat_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-light"
                    android:textSize="@dimen/item_detail_label_text_size"
                    android:textColor="@color/colorSecondaryTextLight"/>

                <TextView
                    android:id="@+id/lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lat_label"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/item_detail_value_text_size"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorPrimaryTextLight"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_content_areas">

                <TextView
                    android:id="@+id/lng_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:textAllCaps="true"
                    android:textSize="@dimen/item_detail_label_text_size"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorSecondaryTextLight"/>

                <TextView
                    android:id="@+id/lng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lng_label"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/item_detail_value_text_size"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorPrimaryTextLight"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>